fix(form): SEPD-5632 overlapping background with form button action
Else:
- Unified button form styling

--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -111,7 +111,10 @@
   }
 
   .item-remove {
+    @extend %button;
+    @extend %button--primary;
     display: none;
+    margin-top: 21px;
   }
 
   .item-add i {
@@ -141,10 +144,14 @@
       gap: 20px;
       margin-top: 65px;
 
+      .btn-save {
+        @extend %button;
+        @extend %button--primary;
+      }
+
       .btn-cancel {
-        color: $text-dark-primary;
-        background-color: $color-white;
-        border-color: $color-shade-navy-40;
+        @extend %button;
+        @extend %button--hollow;
       }
 
       .btn-save,
